--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 ---
-baseurl: "https://tailwoodencat.github.io/hugo-loveit-theme/"
+baseurl: "https://tailwoodencat.github.io/"
 DefaultContentLanguage: "zh-cn"
 hasCJKLanguage: true
 languageCode: "zh-cn"
