--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "hugo --gc --minify -d docs --baseUrl https://tailwoodencat-hugo-loveit-theme.netlify.app"
+  command = "hugo --gc --minify -d docs --baseUrl https://tailwoodencat-hugo-loveit-theme.netlify.app && cp static/favicon.ico ./docs"
 
 [build.environment]
   HUGO_VERSION = "0.78.2"
