--- a/config.toml
+++ b/config.toml
@@ -361,7 +361,7 @@ enableEmoji = true
       # 是否使用目录
       enable = true
       # LoveIt 新增 | 0.2.9 是否保持使用文章前面的静态目录
-      keepStatic = true
+      keepStatic = false
       # 是否使侧边目录自动折叠展开
       auto = true
     # LoveIt 新增 | 0.2.0 代码配置
@@ -608,7 +608,8 @@ enableEmoji = true
       unsafe = true
   # 目录设置
   [markup.tableOfContents]
-    startLevel = 2
+    ordered = false
+    startLevel = 1
     endLevel = 6
 
 # 作者配置
