--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "hugo --gc --minify -d docs --baseUrl https://tailwoodencat-hugo-loveit-theme.netlify.app && cp static/favicon.ico ./docs"
+  command = "hugo --gc --minify -d docs --baseUrl https://tailwoodencat-hugo-loveit-theme.netlify.app --config netlify-config.toml && cp static/favicon.ico ./docs"
 
 [build.environment]
   HUGO_VERSION = "0.80.0"
